# fasttypegame

./: .gitignore  Cargo.toml  index.html  runner.bat
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/csv/: worldcities.csv
data/: worldcities.csv
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  csv.rs  lib.rs  main.rs
frontend/src/csv/: loader.rs
frontend/src/data/: worldcities.csv
questions/: Cargo.toml
questions/src/: lib.rs  main.rs
questions/src/csv/: countries.csv  world-cities.csv
server/: Cargo.toml
server/src/: main.rs
server/static/: index.html  style.css
src/: app.rs  csv.rs  main.rs  text_input.rs  worldcities.csv
static/: index.html  script.js
web/: Cargo.toml
web/src/: lib.rs  main.rs
