[package]
name = "fasttype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diacritics = "0.2.0"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
