[package]
name = "counters"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
chrono = { version = "0.4.30", features = ["serde"] }
env_logger = "0.10.0"
leptos = { version = "0.4.1", features = ["nightly", "ssr"]  }
log = "0.4.20"

questions = {path = "../questions"}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
wasm-bindgen = "0.2"
web-sys = "0.3"
